--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	"scripts": {
 		"start": "vite",
 		"dev": "vite",
-		"build": "vite build",
+		"build": "npm run registry:build && vite build",
 		"serve": "vite preview",
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
