--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "ripple-shadcn-ui",
-	"version": "0.0.0",
+	"name": "ripple-primitives",
+	"version": "0.2.116",
 	"description": "",
 	"type": "module",
 	"engines": {
@@ -16,21 +16,29 @@
 		"registry:build": "shadcn build"
 	},
 	"license": "MIT",
-	"devDependencies": {
-		"@tailwindcss/vite": "^4.1.13",
-		"prettier": "^3.6.2",
-		"prettier-plugin-ripple": "0.2.41",
-		"shadcn": "^3.2.1",
-		"tailwindcss": "^4.1.13",
-		"typescript": "^5.9.2",
-		"vite": "^7.1.5",
-		"vite-plugin-ripple": "0.2.41"
-	},
 	"dependencies": {
+		"@testing-library/dom": "^10.4.1",
+		"@testing-library/user-event": "^14.6.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"ripple": "^0.2.41",
+		"eslint": "^9.37.0",
+		"eslint-plugin-ripple": "0.2.116",
+		"ripple": "0.2.116",
 		"tailwind-merge": "^3.3.1",
-		"tw-animate-css": "^1.3.8"
+		"tw-animate-css": "^1.4.0",
+		"vitest-axe": "^0.1.0"
+	},
+	"devDependencies": {
+		"@tailwindcss/vite": "^4.1.14",
+		"@testing-library/jest-dom": "^6.9.1",
+		"jsdom": "^27.0.0",
+		"prettier": "^3.6.2",
+		"prettier-plugin-ripple": "0.2.116",
+		"shadcn": "^3.4.0",
+		"tailwindcss": "^4.1.14",
+		"typescript": "^5.9.3",
+		"vite": "^7.1.9",
+		"vite-plugin-ripple": "0.2.116",
+		"vitest": "^3.2.4"
 	}
 }
