--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -2,20 +2,17 @@
   "name": "storybook",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "start": "storybook dev -p 6006",
+    "build": "storybook build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.16.1",
   "devDependencies": {
-    "@storybook/csf-tools": "^8.6.14",
-    "@storybook/ripple": "workspace:*",
-    "@storybook/web-components-vite": "9.1.10",
+    "@storybook/builder-vite": "^9.1.10",
     "eslint-plugin-storybook": "9.1.10",
     "lit": "3.3.1",
     "storybook": "9.1.10"
