--- a/templates/primitive/package.json
+++ b/templates/primitive/package.json
@@ -18,7 +18,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "ripple": "*"
+    "ripple": "catalog:"
   },
   "packageManager": "pnpm@10.18.2"
 }
