--- a/apps/storybook/tsconfig.json
+++ b/apps/storybook/tsconfig.json
@@ -11,5 +11,8 @@
 		"jsxImportSource": "ripple",
 		"noEmit": true,
 		"isolatedModules": true,
+		"paths": {
+			"@ripple-primitives/toggle" : ["primitives/ripple/toggle/src"]
+		}
 	}
 }
