--- a/primitives/core/primitive/package.json
+++ b/primitives/core/primitive/package.json
@@ -1,15 +1,21 @@
 {
   "name": "@ripple-primitives/primitive",
   "version": "1.0.0",
-  "description": "",
+  "type": "module",
   "source": "./src/index.ts",
   "main": "./src/index.ts",
   "module": "./src/index.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "exports": {
+    ".": {
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.cjs.js"
+    }
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "scripts": {
+    "build": "vite build"
+  },
+  "dependencies": {
+    "ripple": "catalog:"
+  },
   "packageManager": "pnpm@10.18.2"
 }
