--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
 		"@testing-library/user-event": "^14.6.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"eslint": "^9.37.0",
-		"eslint-plugin-ripple": "0.2.124",
-		"ripple": "0.2.124",
+		"ripple": "catalog:",
 		"tailwind-merge": "^3.3.1",
 		"tw-animate-css": "^1.4.0",
 		"vitest-axe": "^0.1.0"
@@ -32,15 +30,17 @@
 	"devDependencies": {
 		"@tailwindcss/vite": "^4.1.14",
 		"@testing-library/jest-dom": "^6.9.1",
+		"eslint": "^9.37.0",
+		"eslint-plugin-ripple": "catalog:",
 		"jsdom": "^27.0.0",
 		"plop": "^4.0.4",
 		"prettier": "^3.6.2",
-		"prettier-plugin-ripple": "0.2.124",
+		"prettier-plugin-ripple": "catalog:",
 		"shadcn": "^3.4.0",
 		"tailwindcss": "^4.1.14",
 		"typescript": "^5.9.3",
 		"vite": "^7.1.9",
-		"vite-plugin-ripple": "0.2.124",
+		"vite-plugin-ripple": "catalog:",
 		"vitest": "^3.2.4"
 	}
 }
