added single build project and updated storybook

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
 		"paths": {
 			"@/*": ["registry/new-york/*"],
 			"@ripple-primitives/toggle" : ["primitives/ripple/toggle/src"],
-			"@ripple-primitives/primitive-ui" : ["primitives/ripple/primitive/src"]
+			"@ripple-primitives/primitive-ui" : ["primitives/ripple/primitive/src"],
+			"@ripple-primitives/accessible-icon" : ["primitives/ripple/accessible-icon/src"]
 		}
 	}
 }
