--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -7,10 +7,7 @@
     "build": "storybook build"
   },
   "dependencies": {
-    "@ripple-primitives/label": "workspace:*",
-    "@ripple-primitives/primitive": "workspace:*",
-    "@ripple-primitives/primitive-ui": "workspace:*",
-    "@ripple-primitives/toggle": "workspace:*",
+    "ripple-primitives": "workspace:*",
     "ripple": "catalog:"
   },
   "devDependencies": {
