--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
 			"@/*": ["registry/new-york/*"],
 			"@ripple-primitives/toggle" : ["primitives/ripple/toggle/src"],
 			"@ripple-primitives/primitive-ui" : ["primitives/ripple/primitive/src"],
-			"@ripple-primitives/accessible-icon" : ["primitives/ripple/accessible-icon/src"]
+			"@ripple-primitives/accessible-icon" : ["primitives/ripple/accessible-icon/src"],
+			"@ripple-primitives/visually-hidden" : ["primitives/ripple/visually-hidden/src"]
 		}
 	}
 }
