fixed accessible icon story and test case

--- a/primitives/ripple/accessible-icon/package.json
+++ b/primitives/ripple/accessible-icon/package.json
@@ -18,6 +18,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@ripple-primitives/visually-hidden": "workspace:*",
     "ripple": "catalog:"
   },
   "packageManager": "pnpm@10.18.2"
