--- a/primitives/ripple/separator/package.json
+++ b/primitives/ripple/separator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ripple-primitives",
+  "name": "@ripple-primitives/separator",
   "version": "1.0.0",
   "type": "module",
   "source": "./src/index.ts",
@@ -18,12 +18,6 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@ripple-primitives/accessible-icon": "workspace:*",
-    "@ripple-primitives/label": "workspace:*",
-    "@ripple-primitives/primitive": "workspace:*",
-    "@ripple-primitives/separator": "workspace:*",
-    "@ripple-primitives/toggle": "workspace:*",
-    "@ripple-primitives/visually-hidden": "workspace:*",
     "ripple": "catalog:"
   },
   "packageManager": "pnpm@10.18.2"
