--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,9 @@
 			"@ripple-primitives/primitive-ui": ["primitives/ripple/primitive/src"],
 			"@ripple-primitives/accessible-icon": ["primitives/ripple/accessible-icon/src"],
 			"@ripple-primitives/visually-hidden": ["primitives/ripple/visually-hidden/src"],
-			"@ripple-primitives/separator": ["primitives/ripple/separator/src"]
+			"@ripple-primitives/separator": ["primitives/ripple/separator/src"],
+			"@ripple-primitives/arrow": ["primitives/ripple/arrow/src"],
+			"@ripple-primitives/utils": ["primitives/core/utils/src"]
 		}
 	}
 }
