--- a/primitives/core/utils/package.json
+++ b/primitives/core/utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ripple-primitives/primitive-ui",
+  "name": "@ripple-primitives/utils",
   "version": "1.0.0",
   "type": "module",
   "source": "./src/index.ts",
@@ -18,7 +18,6 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@ripple-primitives/utils": "workspace:*",
     "ripple": "catalog:"
   },
   "packageManager": "pnpm@10.18.2"
