toggle group and roving focus group

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,54 +1,34 @@
 {
-    "compilerOptions": {
-        "baseUrl": ".",
-        "target": "ESNext",
-        "module": "ESNext",
-        "lib": [
-            "ES2022",
-            "DOM",
-            "DOM.Iterable"
-        ],
-        "allowSyntheticDefaultImports": true,
-        "esModuleInterop": true,
-        "moduleResolution": "bundler",
-        "jsx": "preserve",
-        "jsxImportSource": "ripple",
-        "noEmit": true,
-        "isolatedModules": true,
-        "paths": {
-            "@/*": [
-                "registry/new-york/*"
-            ],
-            "@ripple-primitives/toggle": [
-                "primitives/ripple/toggle/src"
-            ],
-            "@ripple-primitives/primitive-ui": [
-                "primitives/ripple/primitive/src"
-            ],
-            "@ripple-primitives/accessible-icon": [
-                "primitives/ripple/accessible-icon/src"
-            ],
-            "@ripple-primitives/visually-hidden": [
-                "primitives/ripple/visually-hidden/src"
-            ],
-            "@ripple-primitives/separator": [
-                "primitives/ripple/separator/src"
-            ],
-            "@ripple-primitives/arrow": [
-                "primitives/ripple/arrow/src"
-            ],
-            "@ripple-primitives/utils": [
-                "primitives/core/utils/src"
-            ],
-            "@ripple-primitives/use-size": [
-                "primitives/ripple/use-size/src"
-            ],
-            "@ripple-primitives/aspect-ratio": [
-                "primitives/ripple/aspect-ratio/src"
-            ],
-            "@ripple-primitives/focus-scope": [
-                "primitives/ripple/focus-scope/src"
-            ]
-        }
-    }
+	"compilerOptions": {
+		"baseUrl": ".",
+		"target": "ESNext",
+		"module": "ESNext",
+		"lib": ["ES2022", "DOM", "DOM.Iterable"],
+		"allowSyntheticDefaultImports": true,
+		"esModuleInterop": true,
+		"moduleResolution": "bundler",
+		"jsx": "preserve",
+		"jsxImportSource": "ripple",
+		"noEmit": true,
+		"isolatedModules": true,
+		"paths": {
+			"@/*": ["registry/new-york/*"],
+			"@ripple-primitives/toggle": ["primitives/ripple/toggle/src"],
+			"@ripple-primitives/primitive-ui": ["primitives/ripple/primitive/src"],
+			"@ripple-primitives/accessible-icon": ["primitives/ripple/accessible-icon/src"],
+			"@ripple-primitives/visually-hidden": ["primitives/ripple/visually-hidden/src"],
+			"@ripple-primitives/separator": ["primitives/ripple/separator/src"],
+			"@ripple-primitives/arrow": ["primitives/ripple/arrow/src"],
+			"@ripple-primitives/utils": ["primitives/core/utils/src"],
+			"@ripple-primitives/direction": ["primitives/ripple/direction/src"],
+			"@ripple-primitives/use-size": ["primitives/ripple/use-size/src"],
+			"@ripple-primitives/aspect-ratio": ["primitives/ripple/aspect-ratio/src"],
+			"@ripple-primitives/focus-scope": ["primitives/ripple/focus-scope/src"],
+			"@ripple-primitives/toggle-group": ["primitives/ripple/toggle-group/src"],
+			"@ripple-primitives/roving-focus-group": ["primitives/ripple/roving-focus-group/src"],
+			"@ripple-primitives/use-controllable-state": [
+				"primitives/ripple/use-controllable-state/src"
+			]
+		}
+	}
 }
