--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -12,10 +12,11 @@
   },
   "devDependencies": {
     "@radix-ui/colors": "^3.0.0",
-    "@storybook/builder-vite": "^9.1.10",
-    "eslint-plugin-storybook": "9.1.10",
+    "@storybook/builder-vite": "^10.0.1",
+    "eslint-plugin-storybook": "10.0.1",
+    "vite-plugin-ripple": "catalog:",
     "lit": "3.3.1",
     "storybook": "9.1.10"
   },
-  "packageManager": "pnpm@10.18.2"
+  "packageManager": "pnpm@10.20.0"
 }
