--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -7,16 +7,17 @@
     "build": "storybook build"
   },
   "dependencies": {
-    "ripple-primitives": "workspace:*",
-    "ripple": "catalog:"
+    "ripple": "catalog:",
+    "ripple-primitives": "workspace:*"
   },
   "devDependencies": {
     "@radix-ui/colors": "^3.0.0",
     "@storybook/builder-vite": "^10.0.2",
+    "@storybook/ripple": "workspace:*",
     "eslint-plugin-storybook": "10.0.2",
-    "vite-plugin-ripple": "catalog:",
     "lit": "3.3.1",
-    "storybook": "10.0.2"
+    "storybook": "9.1.10",
+    "vite-plugin-ripple": "catalog:"
   },
   "packageManager": "pnpm@10.20.0"
 }
