--- a/apps/ripple-ui/package.json
+++ b/apps/ripple-ui/package.json
@@ -17,18 +17,21 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.16",
     "eslint": "^9.39.0",
     "eslint-plugin-ripple": "catalog:",
     "prettier": "^3.6.2",
     "prettier-plugin-ripple": "catalog:",
-    "typescript": "^5.9.3",
-    "vite": "^7.1.12",
-    "vite-plugin-ripple": "catalog:",
-    "typescript-plugin-ripple": "catalog:",
     "tailwindcss": "^4.1.16",
-    "@tailwindcss/vite": "^4.1.16"
+    "typescript": "^5.9.3",
+    "typescript-plugin-ripple": "catalog:",
+    "vite": "^7.1.12",
+    "vite-plugin-node-polyfills": "^0.24.0",
+    "vite-plugin-ripple": "catalog:"
   },
   "dependencies": {
-    "ripple": "catalog:"
+    "ripple": "catalog:",
+    "ripple-live": "workspace:*",
+    "ripple-primitives": "workspace:*"
   }
 }
